# part-5

./: 01. Funzioni in Python.ipynb  02. Esempio - Prodotto Scalare.ipynb  03. Esempio - Esponenziale.ipynb  04. Esercizio - Esponenziale (2) - sol.ipynb  04. Esercizio - Esponenziale (2).ipynb  05. Esercizio - Serie Geometrica - sol.ipynb  05. Esercizio - Serie Geometrica.ipynb  06. Esercizio - Logaritmo (1) - sol.ipynb  06. Esercizio - Logaritmo (1).ipynb  07. Esercizio - Logaritmo (2) - sol.ipynb  07. Esercizio - Logaritmo (2).ipynb  08. Esercizio - Serie Armonica - sol.ipynb  08. Esercizio - Serie Armonica.ipynb  09. Esercizio - Norma L2 - sol.ipynb  09. Esercizio - Norma L2.ipynb  10. Esercizio - Somma Elemento per Elemento - sol.ipynb  10. Esercizio - Somma Elemento per Elemento.ipynb  11. Esercizio - Elemento Massimo - sol.ipynb  11. Esercizio - Elemento Massimo.ipynb  12. Esercizio - sin(x) - sol.ipynb  12. Esercizio - sin(x).ipynb  13. Esercizio - Trovare un Elemento - sol.ipynb  13. Esercizio - Trovare un Elemento.ipynb  14. Esercizio - Massimizzazione di un Prodotto - sol.ipynb  14. Esercizio - Massimizzazione di un Prodotto.ipynb  15. Esercizio - Minimizzazione di un Prodotto - sol.ipynb  15. Esercizio - Minimizzazione di un Prodotto.ipynb  pyproject.toml
