[tool.poetry]
name = "part-5"
version = "1.0"
description = "Part 5 of the Fondamenti di Informatica - T course"
authors = ["Michele Lombardi <michele.lombardi2@unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
notebook = "6.5.6"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
rise = "^5.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
